--- a/package.json
+++ b/package.json
@@ -33,6 +33,12 @@
     "scss": "^0.2.4",
     "web-vitals": "^2.1.4"
   },
+  
+    "engines": {
+      "node": ">=16.20.1"
+    }
+  ,
+  
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run build",
