--- a/package.json
+++ b/package.json
@@ -34,6 +34,11 @@
     "web-vitals": "^2.1.4"
   },
   
+    "engines": {
+      "node": ">17"
+    }
+  ,
+  
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run build",
